--- a/pipeline-tests/build-tests/helm/Jenkinsfile
+++ b/pipeline-tests/build-tests/helm/Jenkinsfile
@@ -17,7 +17,8 @@ podTemplates.dockerTemplate {
         {
             checkout scm
             env_config = utils.getConfig()
-            env_config.commitHash = utils.getShortCommit()
+            env_config.commitHash = utils.getLongCommit()
+            env_config.dockerImage = "${BRANCH_NAME}-
         }
 
         stage ('Build Helm Chart')
