--- a/pipeline-tests/build-tests/helm/Jenkinsfile
+++ b/pipeline-tests/build-tests/helm/Jenkinsfile
@@ -21,6 +21,11 @@ podTemplates.dockerTemplate {
             env_config.dockerImageTag = "${BRANCH_NAME}-${utils.getShortCommit()}"
         }
 
+        stage ('debug')
+        {
+            sh 'pwd && find .'
+        }
+
         stage ('Build Helm Chart')
         {
              [ 'registry' : 'test-registry',  'repository' : 'test-repo' ]
