--- a/pipeline-tests/build-tests/helm/Jenkinsfile
+++ b/pipeline-tests/build-tests/helm/Jenkinsfile
@@ -23,7 +23,7 @@ podTemplates.dockerTemplate {
 
         stage ('debug')
         {
-            sh 'pwd && find .'
+            sh 'pwd && find . && ls -latr'
         }
 
         stage ('Build Helm Chart')
