--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -169,7 +169,7 @@ jobs:
           environmentVariables {
               env('BRANCH_NAME', 'main')
               env('TOOLS_URL', 'https://github.com/antman25/jenkins-shared-lib.git')
-              env('TENANT', 'PIP')
+              env('CRED_ID', '')
           }
 
           definition {
@@ -194,6 +194,7 @@ jobs:
               env('BRANCH_NAME', 'main')
               env('TOOLS_URL', 'http://10.0.0.222:7990/scm/pip/jenkins-shared-lib.git')
               env('TENANT', 'PIP')
+              env('CRED_ID', 'BITBUCKET_CRED')
           }
 
           definition {
