--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -174,6 +174,8 @@ jobs:
       
       pipelineJob('seed-job/simple-test')
       {
+        displayName("Test K8S Agent")
+        description("Simple test to exercise spinning up a k8s agent pod")
         definition {
           cpsFlowDefinition {
 
