--- a/casc/baseline.yaml
+++ b/casc/baseline.yaml
@@ -176,7 +176,52 @@ jobs:
         }
       }
       
-      pipelineJob("seed-job/gitlab") {
+      multibranchPipelineJob("seed-job/github")
+      {
+          displayName("Deploy Jenkins Jobs - Github")
+          description("Delete this job when when the jenkins instance is bootstrapped")
+
+          branchSources {
+              branchSource {
+                  source {
+                      git {
+                          remote ('https://github.com/antman25/jenkins-shared-lib.git')
+                          // all id's must be unique according to docs
+                          ////id ('deploy-jobs-github-source-id')
+                          traits {
+                              gitBranchDiscovery()
+
+                              headRegexFilter
+                              {
+                                  regex('.*')
+                              }
+                          }
+                      }
+                  }
+                  strategy {
+                      allBranchesSame {
+                          props {
+                              suppressAutomaticTriggering {
+                                  triggeredBranchesRegex ('^(.*main).*$')
+                              }
+                          }
+                      }
+                  }
+              }
+          }
+          orphanedItemStrategy {
+              discardOldItems {
+                  numToKeep(20)
+              }
+          }
+          factory {
+              workflowBranchProjectFactory {
+                  scriptPath('Jenkinsfile')
+              }
+          }
+      }
+      
+      /*pipelineJob("seed-job/gitlab") {
           displayName("Temporary Seed Job - Github Source")
           description("Seed job used to bootstrap")
 
@@ -226,5 +271,5 @@ jobs:
               }
             }
           }
-      }
+      }*/
       
