--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,105 +1,4 @@
-common:
-  urlBitbucket: http://10.0.0.35
-  branchDelivery: main
-  rootTestingFolder: job-testing
-  envVars:
-    COMMON_VAR1: TestValue2
-    COMMON_VAR2: TestValue1
-  jobs:
-    utilities:
-      release-management:
-        displayName: Release Management
-        description: Release sw
-        repoUrl: https://github.com/antman25/jenkins-shared-lib.git
-        pathJenkinsfile: jenkinsfile/common/utilities/release-management/Jenkinsfile
-        credentialId: tenant-bitbucket-ro-cred
-        jobEnvVars:
-          REL_MGMT: true
-        branchFilterRegex: .*
-        branchBuildRegex: '!.*$'
-      common-util-job1:
-        displayName: Util Job One
-        description: Util Job One
-        repoUrl: https://github.com/antman25/jenkins-shared-lib.git
-        pathJenkinsfile: jenkinsfile/common/utilities/task-one/Jenkinsfile
-        credentialId: tenant-bitbucket-ro-cred
-        jobEnvVars:
-          EnvVar1: true
-        branchFilterRegex: .*
-        branchBuildRegex: '!.*$'
-      common-util-job2:
-        displayName: Util Job Two
-        description: Release sw
-        repoUrl: https://github.com/antman25/jenkins-shared-lib.git
-        pathJenkinsfile: jenkinsfile/common/utilities/task-two/Jenkinsfile
-        credentialId: tenant-bitbucket-ro-cred
-        jobEnvVars:
-          EnvVar2: blah
-          EnvaVar3: false
-        branchFilterRegex: .*
-        branchBuildRegex: '!.*$'
-    DemoType:
-      common-demo-job1:
-        displayName: Demo Job One
-        description: Demo Job One
-        repoUrl: https://github.com/antman25/jenkins-shared-lib.git
-        pathJenkinsfile: jenkinsfile/common/utilities/task-one/Jenkinsfile
-        credentialId: tenant-bitbucket-ro-cred
-        jobEnvVars:
-          EnvVar1: true
-        branchFilterRegex: .*
-        branchBuildRegex: '!.*$'
 tenants:
-  pipeline:
-    displayName: Pipeline Team
-    groups:
-    - pipline
-    - admin
-    projectList:
-    - PIP
-    - PIPAPP
-    repoFilterRegex: ^(?!.*(jenkins-shared-lib))
-    jobs:
-      Demo:
-        test-job1:
-          displayName: K8S Template Pipeline
-          description: Demo Job One
-          repoUrl: ''
-          pathJenkinsfile: jenkinsfile/common/utilities/task-one/Jenkinsfile
-          credentialId: tenant-bitbucket-ro-cred
-          jobEnvVars:
-            EnvVar1: true
-          branchFilterRegex: .*
-          branchBuildRegex: '!.*$'
-  group-a:
-    displayName: group-a
-    groups:
-    - groupa
-    projectList:
-    - prjA
-    repoFilterRegex: .*
-    jobs: {}
-  group-b:
-    displayName: group-b
-    groups:
-    - groupb
-    projectList:
-    - prjB
-    repoFilterRegex: .*
-    jobs: {}
-  test-1:
-    displayName: Team One
-    groups:
-    - test1
-    projectList:
-    - prjC
-    repoFilterRegex: .*
-    jobs: {}
-  test-2:
-    displayName: Team Two
-    groups:
-    - test2
-    projectList:
-    - prjD
-    repoFilterRegex: .*
-    jobs: {}
+  common:
+    vars:
+      bitbucket_url: http://10.0.0.35
